# antares_test

./: .env  Cargo.toml
migrations/2021-08-20-032220_db_setup/: up.sql
src/: lib.rs  schema.rs
src/dal/: log_dal.rs
src/db/: database_pool.rs  mod.rs
src/models/: log_model.rs  mod.rs
src/traits/: base_repository_trait.rs  mod.rs
