[package]
name = "antares-testbed"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "*"}
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2", "uuidv07", "numeric", "serde_json"] }
once_cell = "1.8"
r2d2 = "0.8"
thiserror = "1.0.25"
anyhow = { version="1.0", features=["backtrace"]}
dotenv = "0.15.0"